# pyhelp

./: .gitignore  LICENSE.md  NOTICE.md  README.md  __init__.py  conftest.py  exporter.py  parser.py  pyproject.toml  registry.py  requirements-dev.txt  requirements.txt  sizing.py  theme.py
defaults/: default_size.json  default_style.qss  default_theme.json
tests/: __init__.py  test_parser.py  test_registry.py
tests/sample_help/: _config.yaml
tests/sample_help/tools/: crop.rst  select.rst
tests/sample_help/view/: viewmode.rst  zoom-fit.rst
todo/: rst-renderer.md
widgets/: __init__.py  help_tree.py  help_window.py
